# novus_api

./: .env.example  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: errors.rs  lib.rs
src/clients/: api.rs  auth.rs  http.rs
src/models/: auth.rs  bonuses.rs  goods.rs  purchases.rs  user.rs
tests/: goods.rs  profile.rs
