[package]
name = "novus_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.11"
serde_json = "1.0.135"

[dev-dependencies]
dotenvy = "0.15.7"
